# signalbid

./: .gitignore  README.md  index.html  pyproject.toml
src/signalbid/: __init__.py
src/signalbid/config/: sources.yml
src/signalbid/ingest/: __init__.py  fetch.py  run.py  test_selectors.py
src/signalbid/score/: __init__.py  engine.py
